[package]
name = "meteora"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
solana-program = {workspace = true}
borsh = {workspace = true}
spl-token-2022 = {workspace = true}
spl-associated-token-account = {workspace = true}
ruint = { version = "1.12.0", default-features = false }


#cp-amm = { path = "../../damm-v2/programs/cp-amm", features = ["no-entrypoint", "cpi"] }

[dev-dependencies]
# Client dependencies
solana-client = "2.2.1"
solana-sdk = "2.2.1"
log = "0.4.22"
env_logger = "0.10.0"
dotenvy = "0.15.7"
serde_json = "1.0.132"
anyhow = "1.0.97"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
meteora-damm-v2-rep = {package = "cp-amm", path = "../../solana-sdk/meteora/damm-v2/programs/cp-amm", features=["no-entrypoint"] }
meteora-damm-v2-sdk = {package = "rust-sdk",  path = "../../solana-sdk/meteora/damm-v2/rust-sdk"}
bytemuck = "1.23"
memoffset = "0.9.1"